<?xml version="1.0"?>
<package>
  <name>day2_client</name>
  <version>0.0.1</version>
  <description>The day2_client package</description>
  <maintainer email="muhrix@gmail.com">Murilo F. M.</maintainer>
  <license>BSD</license>
  <author email="muhrix@gmail.com">Murilo F. M.</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>day2_service</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>day2_service</run_depend>
</package>

